# composite_viewer_and_modeller

./: CMakeLists.txt  README.md
data/models/: bottle.ply  coordinate_frame.osg  pipe.ply
data/supplementary/: ellipses_2.ggb
doc/: graph.dot  notes.odt
src/: CompositeViewerModeller.cpp  CompositeViewerModeller.hpp  MainFrame.cpp  MainFrame.hpp
src/geometry/: Circle3D.cpp  Circle3D.hpp  Ellipse2D.cpp  Ellipse2D.hpp  Ellipse2DLight.cpp  Ellipse2DLight.hpp  Line2D.cpp  Line2D.hpp  Plane3D.cpp  Plane3D.hpp  Primitives.hpp  Ray3D.cpp  Ray3D.hpp  Rectangle2D.cpp  Rectangle2D.hpp  Segment2D.cpp  Segment2D.hpp
src/image/algorithms/: Algorithms.cpp  Algorithms.hpp
src/image/gui/: ImageFrame.cpp  ImageFrame.hpp  ImagePanel.cpp  ImagePanel.hpp
src/modeller/: CoordinateTransformations.cpp  CoordinateTransformations.hpp  ImageModeller.cpp  ImageModeller.hpp  PersProjParam.cpp  PersProjParam.hpp  ProjectionParameters.cpp  ProjectionParameters.hpp  UIHelper.cpp  UIHelper.hpp
src/modeller/components/: ComponentBase.cpp  ComponentBase.hpp  ComponentGeometryBase.cpp  ComponentGeometryBase.hpp  GeneralizedCylinder.cpp  GeneralizedCylinder.hpp  GeneralizedCylinderGeometry.cpp  GeneralizedCylinderGeometry.hpp  Sphere.cpp  Sphere.hpp
src/modeller/gui/: ComponentRelationsDialog.cpp  ComponentRelationsDialog.hpp
src/modeller/optimization/: CircleEstimator.cpp  CircleEstimator.hpp  ComponentSolver.cpp  ComponentSolver.hpp  Constraints.cpp  Constraints.hpp  ExtractPlaneNormals.hpp  ModelSolver.cpp  ModelSolver.hpp  OptimizationUtility.hpp  SolveDepths.hpp  SolveDepths_old.hpp
src/modeller/optimization/previous/: ComponentSolver.hpp
src/osg/: OsgSelectionHandler.cpp  OsgSelectionHandler.hpp  OsgUtility.cpp  OsgUtility.hpp  OsgWxFrame.cpp  OsgWxFrame.hpp  OsgWxGLCanvas.cpp  OsgWxGLCanvas.hpp  OsgWxGraphicsWindow.cpp  OsgWxGraphicsWindow.hpp
src/utility/: AlgebraicKernel.cpp  AlgebraicKernel.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  Utility.cpp  Utility.hpp
src/wx/: WxGuiId.hpp  WxUtility.cpp  WxUtility.hpp
